--- a/index.html
+++ b/index.html
@@ -1,162 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>Leaflet.geoCSV: Test WKT</title>
 
       <!-- Leaflet 0.5: https://github.com/CloudMade/Leaflet-->
 		<link rel="stylesheet" href="../../lib/leaflet.css" />
 		<!--[if lte IE 8]> <link rel="stylesheet" href="../../lib/leaflet.ie.css" />  <![endif]-->  
 		<script src="../../lib/leaflet.js"></script>
 
+		<!-- MarkerCluster https://github.com/danzel/Leaflet.markercluster -->
+		<link rel="stylesheet" href="../../lib/MarkerCluster.css" />
+		<link rel="stylesheet" href="../../lib/MarkerCluster.Default.css" />
+		<!--[if lte IE 8]> <link rel="stylesheet" href="../../lib/MarkerCluster.Default.ie.css" /> <![endif]-->
+		<script src="../../lib/leaflet.markercluster-src.js"></script>
+
 		<!-- GeoCSV: https://github.com/joker-x/Leaflet.geoCSV -->
 		<script src="../../leaflet.geocsv-src.js"></script>
 
-		<!-- CodeMirror -->
-		<link rel="stylesheet" href="../../lib/codemirror/codemirror.css">
-		<script src="../../lib/codemirror/codemirror.js"></script>
-		<script src="../../lib/codemirror/util/matchbrackets.js"></script>
-		<script src="../../lib/codemirror/mode-javascript.js"></script>
+		<!-- jQuery 1.8.3: http://jquery.com/ -->
+		<script src="../../lib/jquery.js"></script>
 
 		<style>	
-		html, body {
+		html, body, #mapa {
 			margin: 0;
 			padding: 0;
-			font-family: Arial, sans-serif;
-			background-color: #eee;
-		}
-		a {
-			text-decoration: none;
-		}
-		.caja {
-			display: block;
-			float:left;
-			width: 43%;
-			margin: 1%;
-			padding: 2%;
-			border: 1px solid #ccc;
-			background-color: #fff;
-		}
-		#mapa {
-			height: 300px;
-		}
-		h1 {
-			margin: 0;
-			text-align: center;
-			padding: 10px;
-			border-bottom: 1px solid #ccc;
-			background-color: #fff
-		}
-		h2 {
-			margin-bottom: 5px;
-		}
-		textarea {
-			clear: both;
 			width: 100%;
-			height: 200px;
-			font-family: monospace;
+			height: 100%;	
+			font-family: Arial, sans-serif;
+			font-color: #38383;
 		}
-		#cargar {
-			margin: 20px 0 0 0;
-			font-size: 1.2em;
+
+		#botonera {
+			position:fixed;
+			top:10px;
+			left:50px;
+			z-index: 2;
 		}
-		.CodeMirror {
-			border: 1px solid #eee;
-			font-size: 1.2em;
-			height: auto;
-			font-family: monospace;
+
+		#cargando {
+			position:fixed;
+			top:0;
+			left:0;
+			width:100%;
+			height:100%;
+			background-color:#666;
+			color:#fff;
+			font-size:2em;
+			padding:20% 40%;
+			z-index:10;
+		}
+
+		.boton {
+			border: 1px solid #96d1f8;
+			background: #65a9d7;
+			background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+			background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+			background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+			background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+			background: -o-linear-gradient(top, #3e779d, #65a9d7);
+			padding: 12px 24px;
+			-webkit-border-radius: 10px;
+			-moz-border-radius: 10px;
+			border-radius: 10px;
+			-webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+			-moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+			box-shadow: rgba(0,0,0,1) 0 1px 0;
+			text-shadow: rgba(0,0,0,.4) 0 1px 0;
+			color: white;
+			font-size: 17px;
+			/*font-family: Helvetica, Arial, Sans-Serif;*/
+			text-decoration: none;
+			vertical-align: middle;
+		}
+		.boton:hover {
+			border-top-color: #28597a;
+			background: #28597a;
+			color: #ccc;
+		}
+		.boton:active {
+			border-top-color: #1b435e;
+			background: #1b435e;
 		}
 		</style>
 	</head>
 	<body>
-		<h1><a href="https://github.com/joker-x/Leaflet.geoCSV" title="Repositorio en github">Leaflet.GeoCSV</a>: Test de WKT</h1>
-      <div class="caja">
-		<div id="controles">
-			<p>En esta página puedes cambiar las opciones del plugin y los datos CSV. Al pulsar el botón <i>Cargar datos</i> se aplicarán los cambios y podrás navegar por el mapa de la derecha</p>
-			<h2>Opciones</h2>
-			<textarea id="opciones">
-L.geoCsv(null,{
-  titles: ['Feature', 'Popup'],
-  fieldSeparator: ',',
-  lineSeparator: '\n',
-  activeWKT: true,
-  WKTTitle: 'Feature',
-  debug: true,
-  onEachFeature: function (feature, layer) {
-    var popup = '';
-    for (var clave in feature.properties) {
-      var title = geo_csv.getPropertyTitle(clave);
-      popup += '<b>'+title+'</b><br />'+feature.properties[clave]+'<br /><br />';
-    }
-    layer.bindPopup(popup);
-  }
-});</textarea>
-			<h2>CSV</h2>
-			<textarea id="csv">
-# Geometry primitives (2D)
-"POINT (2.3522 48.8566)","Point París"
-"LINESTRING (-3.7038 40.4168,38 56)","LineString"
-"POLYGON (-3.707721 40.412752,2.3522 48.8566,12.4608 41.9015,-3.707721 40.412752)","Polygon"
+		<div id="mapa"></div>
+		<div id="cargando">Cargando...</div>
 
-# Multipart geometries (2D)
-"MULTIPOINT (30 50, 40 30)","MultiPoint format 1"
-"MULTIPOINT ((38 56), (39 59))","MultiPoint format 2"
-"MULTILINESTRING ((-2 30.4168,38 56),(38 50, -1 40))","MultiLineString"
-"MULTIPOLYGON (((-10.3 45,2.3522 48.8566,12.4608 41.9015,-3.707721 40.412752)),((-3.7038 40.4168,4 30, 38 56,-3.7038 40.4168)))","MultiPolygon"
-
-# Error latitude
-"POINT (230.7293 37.9837)","Atenas, capital de Grecia"</textarea>
-			<button id="cargar">Cargar datos</button>
-		</div>
-		</div>
-		<div class="caja">
-			<div id="mapa"></div>
+		<div id="botonera">
+			<button id="localizame" class="boton">Bankias cercanos</button>
 		</div>
 
 <script>
 
-//codemirror
-var opciones_editor = CodeMirror.fromTextArea(document.getElementById("opciones"), {
-  lineNumbers: true,
-  matchBrackets: true,
-  mode: "text/typescript"});
+//;$(function() {
 
-var csv_editor = CodeMirror.fromTextArea(document.getElementById("csv"), {lineNumbers: true});
-
-//altura del mapa al tamaño de los controles, dos columnas iguales
-function ajusta_Altura() {
-  var altura = document.getElementById('controles').offsetHeight
-  document.getElementById('mapa').style.height = altura+20+"px";
-}
-
-ajusta_Altura();
-
-//instanciamos el mapa
-var mapa = L.map('mapa', {attributionControl:false}).setView([49, 3], 4);
+var mapa = L.map('mapa', {attributionControl:false}).setView([40.46, -3.75], 5);
 
 L.tileLayer('http://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 	maxZoom: 18
 }).addTo(mapa);
 
-//dotamos de funcionalidad al botón cargar
-var geo_csv = {};
+var bankias = L.geoCsv(null, {
+	onEachFeature: function (feature, layer) {
+		var popup = '';
+		for (var clave in feature.properties) {
+			var title = bankias.getPropertyTitle(clave);
+			popup += '<b>'+title+'</b><br />'+feature.properties[clave]+'<br /><br />';
+		}
+		layer.bindPopup(popup);
+	},
+	pointToLayer: function (feature, latlng) {
+		return L.marker(latlng, {
+			icon:L.icon({
+				iconUrl: 'marcador-bankia.png',
+				shadowUrl: 'marker-shadow.png',
+				iconSize: [25,41],
+				shadowSize:   [41, 41],
+				shadowAnchor: [13, 20]
+			})
+		});
+	},
+	firstLineTitles: true,
+	debug: true,
+	fieldSeparator: ';'
+});
 
-function cargar() {
-  //guardamos los cambios del usuario en sus respectivos textarea
-  opciones_editor.save();
-  csv_editor.save();
-  //borramos la capa geo_csv del mapa
-  mapa.removeLayer(geo_csv);
-  //recreamos la capa con las nuevas opciones
-  geo_csv = eval(document.getElementById('opciones').value);
-  geo_csv.addData(document.getElementById('csv').value);
-  mapa.addLayer(geo_csv);
-}
+$.ajax ({
+	type:'GET',
+	dataType:'text',
+	url:'https://joker-x.github.io/Leaflet.geoCSV/examples/bankia/bankias.csv',
+   error: function() {
+     alert('No se pudieron cargar los datos');
+   },
+	success: function(csv) {
+      var cluster = new L.MarkerClusterGroup();
+		bankias.addData(csv);
+		cluster.addLayer(bankias);
+		mapa.addLayer(cluster);
+		mapa.fitBounds(cluster.getBounds());
+	},
+   complete: function() {
+      $('#cargando').delay(500).fadeOut('slow');
+   }
+});
 
-document.getElementById('cargar').addEventListener('click', cargar, false);
 
+$('#localizame').click(function(e) {
+	mapa.locate();
+	$('#localizame').text('Localizando...');
+	mapa.on('locationfound', function(e) { 
+		mapa.setView(e.latlng, 15);
+		$('#localizame').text('Bankias cercanos');
+	});
+});
+
+//});
 </script>
 
 	</body>
